syntax = "proto3";

// This is the example of the proto file for the GRPC endpoints that will be exposed by this micro service
// The endpoints and messages are defined here, if another service needs to call any of these GRPC endpoints
// it will need to import this proto file
//The logic of theses endpoints will be implemented in the grpc folder, for this example in the BaseModel1GRPCService class
package goBaseService;

import "google/protobuf/empty.proto";

// Specify the Go package for the generated code
option go_package = "/proto/gen;gen";

service BaseModel1GRPCService {



    rpc ExampleCall (ExampleCallRequest) returns (ExampleCallResponse){
    }

    rpc ExampleCallReturnsEmpty (ExampleCallReturnsEmptyRequest) returns (google.protobuf.Empty) {
    }

}
message ExampleCallRequest {
    string userId = 1;
    string otherField = 2;
}

message ExampleCallResponse{
    bool transactionsFound = 1;
    int64 transactionsCount = 2;
}

message ExampleCallReturnsEmptyRequest {
    repeated ObjectExample listOfObjectExample = 1;
}

message ObjectExample{
    string userId = 1;
    string reportId = 2;
    string transactionId = 3;
    string jsonData = 4;
    string transactionDate = 5;
}
